==========
Change Log
==========

Version 2.1.10 - 
-------------------------------
- Fixed bug in reporting named parse results for ZeroOrMore
  expressions, thanks Ethan Nash for reporting this!

- Added support for multiline test strings in runTests.

- Fixed bug in ParseResults.dump when keys were not strings.
  Also changed display of string values to show them in quotes,
  to help distinguish parsed numeric strings from parsed integers
  that have been converted to Python ints.


Version 2.1.9 - September, 2016
-------------------------------
- Added class CloseMatch, a variation on Literal which matches 
  "close" matches, that is, strings with at most 'n' mismatching
  characters.

- Fixed bug in Keyword.setDefaultKeywordChars(), reported by Kobayashi
  Shinji - nice catch, thanks!

- Minor API change in pyparsing_common. Renamed some of the common
  expressions to PEP8 format (to be consistent with the other 
  pyparsing_common expressions):
  . signedInteger -> signed_integer
  . sciReal -> sci_real
  
  Also, in trying to stem the API bloat of pyparsing, I've copied
  some of the global expressions and helper parse actions into 
  pyparsing_common, with the originals to be deprecated and removed
  in a future release:
  . commaSeparatedList -> pyparsing_common.comma_separated_list
  . upcaseTokens -> pyparsing_common.upcaseTokens
  . downcaseTokens -> pyparsing_common.downcaseTokens

  (I don't expect any other expressions, like the comment expressions,
  quotedString, or the Word-helping strings like alphas, nums, etc.
  to migrate to pyparsing_common - they are just too pervasive. As for
  the PEP8 vs camelCase naming, all the expressions are PEP8, while
  the parse actions in pyparsing_common are still camelCase. It's a 
  small step - when pyparsing 3.0 comes around, everything will change
  to PEP8 snake case.)

- Fixed Python3 compatibility bug when using dict keys() and values()
  in ParseResults.getName().
